# data-structures

./: README
experiment/: experiments.code-workspace
experiment/experiment1/: ~$报告1 杨晨2024070646.docx  实验报告1 杨晨2024070646.docx
experiment/experiment1/question1/: a.out  main  main.c
experiment/experiment1/question2/: main  main.c
experiment/experiment1/question3/: main  main.c
experiment/experiment2/: 实验2 杨晨2024070646.docx
experiment/experiment2/question1/: main  main.c
experiment/experiment2/question3/: main  main.c
experiment/experiment3/: 实验3 杨晨2024070646.docx
experiment/experiment3/question1/: CMakeLists.txt
experiment/experiment3/question1/include/: list.h  queue.h  stack.h
experiment/experiment3/question1/src/: list_L.c  list_Sq.c  main.c  queue.c  queue_Sq.c  stack_Sq.c
experiment/experiment3/question3/: CMakeLists.txt
experiment/experiment4/: CMakeLists.txt  实验4 杨晨 2024070646.docx
experiment/experiment4/Claude_gen/: CMakeLists.txt
experiment/experiment4/Claude_gen/include/: string_c.h
experiment/experiment4/Claude_gen/src/: main.c  string.c
experiment/experiment4/include/: blockchain.h
experiment/experiment4/src/: blockchain.c  main.c  test_string.c
experiment/experiment5/: 实验5 杨晨 2024070646.docx
experiment/experiment6/: 实验6 杨晨 2024070646.docx
lab manual/数据结构实验/: Experiment_10.docx  Experiment_3.docx  Experiment_4.docx  Experiment_6.docx  Experiment_7.docx  Experiment_8.docx  Experiment_9.docx  《程序设计基础--数据结构（C语言版）》实验内容参考手册.rtf  注.txt
数据结构实验/: Experiment_1.docx  Experiment_2.docx  Experiment_5.docx
(+13 files in other folders)
